project/stage/tests/accept/basic.ul
void main(){
  int i;
  int j;
  float f;
  string s;
  boolean b;
  char c;
  int[5] arr;
  i = 1;
  f = 2.0;
  s = "Hello";
  c = 'c';
  b = false;
  b = true;
  arr[4] = 333;
  println 1;
  j = i;
  print j;
  print i;
  println "hello";
}