project/stage/tests/reject/bad_if_statement.ul
void main(){
  int i;
  i = 1;
  if(i + 1){
    print "thing";
  }
  if((i)){
    print "thing";
  }
  if("thing"){
    print "thing";
  }
  if('t'){
    print "thing";
  }
  if(1){
    print "thing";
  }
  if(1.1){
    print "thing";
  }
  if(true){
    print "thing";
  }
  if(false){
    print "thing";
  }
}